Fix 'race condition' with big gap checks and fix appearance

--- a/statuspage/css/style.css
+++ b/statuspage/css/style.css
@@ -133,10 +133,11 @@ main {
 
 
 
-/* TODO */
 #big-gap {
 	display: none;
 	color: #CC0000;
+	padding-left: 3em;
+	font-size: 14px;
 }
 
 
